base/yaml/sa-extra.yaml
apiVersion: v1
kind: Pod
metadata:
  name: service-account-pod
  namespace: default
spec:
  containers:
    - command: ["/bin/bash", "-c", "apt update -y -qq && apt install -qq -y curl && curl -s https://kubernetes:443/api/v1/namespaces/default/pods --header \"Authorization: Bearer $(cat /var/run/secrets/kubernetes.io/serviceaccount/token)\" --insecure && sleep 3600"]
      image: ubuntu
      name: pods-simple-container
  serviceAccount: service-account-pod-read
