base/yaml/secret.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: simple-secret-secret-key-ref-pod
spec:
  containers:
    - command:
        - sleep
        - "3600"
      image: busybox
      name: simple-secret-secret-key-ref-container
      volumeMounts:
        - name: simple-secret-secret-key-ref-volume
          mountPath: "/etc/simple-secret"
  volumes:
    - name: simple-secret-secret-key-ref-volume
      secret:
        secretName: simple-secret-secret-key-ref-secret
